# cmake_test

./: CMakeLists.txt
cmake/Modules/: FindElementary.cmake
src/: CMakeLists.txt  button_example_01.c
src_main/: CMakeLists.txt  main.c
